--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/gosso22/stations-mapping#readme",
   "dependencies": {
-    "leaflet": "^0.7.7",
+    "leaflet": "^1.0.0-rc.3",
     "react": "^15.3.0",
     "react-bootstrap": "^0.30.1",
     "react-dom": "^15.3.0",
-    "react-leaflet": "^0.12.1",
+    "react-leaflet": "^1.0.0-beta.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
   },
